<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <ImageView
        android:id="@+id/song_image_art"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height0"
        android:layout_weight="2"
        android:background="@drawable/album"
        android:contentDescription="@string/content_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height0"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/song_name_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:background="@color/player_activity_background_color"
            android:gravity="center_horizontal"
            android:text="@string/song_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text36" />

        <TextView
            android:id="@+id/artist_name_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:layout_below="@id/song_name_display"
            android:background="@color/player_activity_background_color"
            android:gravity="center_horizontal"
            android:text="@string/artist_name"
            android:textSize="@dimen/text24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_below="@id/artist_name_display"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/previous"
                android:background="@color/player_activity_background_color"
                android:contentDescription="@string/previous_desc"
                android:src="@drawable/previous" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/play"
                android:layout_weight="1"
                android:background="@color/player_activity_background_color"
                android:contentDescription="@string/play_desc"
                android:src="@drawable/playbutton"
                android:onClick="PlaySong" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/nextSong"
                android:background="@color/player_activity_background_color"
                android:contentDescription="@string/next_desc"
                android:onClick="NextSong"
                android:src="@drawable/next" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>